; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/vm/extr_vm_compressor_algorithms.c_vm_compressor_get_decode_scratch_size.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/vm/extr_vm_compressor_algorithms.c_vm_compressor_get_decode_scratch_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@vm_compressor_current_codec = common dso_local global i64 0, align 8
@VM_COMPRESSOR_DEFAULT_CODEC = common dso_local global i64 0, align 8
@WKdm_SCRATCH_BUF_SIZE_INTERNAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @vm_compressor_get_decode_scratch_size() #0 {
  %1 = alloca i32, align 4
  %2 = load i64, i64* @vm_compressor_current_codec, align 8
  %3 = load i64, i64* @VM_COMPRESSOR_DEFAULT_CODEC, align 8
  %4 = icmp ne i64 %2, %3
  br i1 %4, label %5, label %8

5:                                                ; preds = %0
  %6 = load i32, i32* @WKdm_SCRATCH_BUF_SIZE_INTERNAL, align 4
  %7 = call i32 @MAX(i32 4, i32 %6)
  store i32 %7, i32* %1, align 4
  br label %10

8:                                                ; preds = %0
  %9 = load i32, i32* @WKdm_SCRATCH_BUF_SIZE_INTERNAL, align 4
  store i32 %9, i32* %1, align 4
  br label %10

10:                                               ; preds = %8, %5
  %11 = load i32, i32* %1, align 4
  ret i32 %11
}

declare dso_local i32 @MAX(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
